--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,26 +1,19 @@
-<h2>Log in</h2>
-
-<%= form_for(@resource, as: @resource_name, url: session_path(@resource_name)) do |f| %>
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+<h2>DoggyWalky</h2>
+<h2>Parce que chaque compagnon mérite une belle balade</h2>
+<div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url()">
+  Vous promenez votre toutou tout seul et vous en avez marre ? DoggyWalky est pour trouver des compagnons à votre toutou
+</div>
+<div class="cards">
+  <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url()">
+    Des groupes de sortie
   </div>
 
-  <div class="field">
-    <%= f.label :password %><br />
-    <%= f.password_field :password, autocomplete: "current-password" %>
+  <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url()">
+    Pour tous les propriétaires de chien
   </div>
 
-  <% if @devise_mapping.rememberable? %>
-    <div class="field">
-      <%= f.check_box :remember_me %>
-      <%= f.label :remember_me %>
-    </div>
-  <% end %>
-
-  <div class="actions">
-    <%= f.submit "Log in" %>
+  <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url()">
+    Les groupes et les maps
   </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+  <%= link_to "inscrivez-vous maintenant !", new_user_registration_path, class: "btn btn-flat" %>
+</div>
