--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,19 +1,25 @@
 <h2>DoggyWalky</h2>
 <h2>Parce que chaque compagnon mérite une belle balade</h2>
-<div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url()">
-  Vous promenez votre toutou tout seul et vous en avez marre ? DoggyWalky est pour trouver des compagnons à votre toutou
-</div>
-<div class="cards">
+<div class="container">
   <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url()">
-    Des groupes de sortie
+    Vous promenez votre toutou tout seul et vous en avez marre ? DoggyWalky est pour trouver des compagnons à votre toutou
   </div>
-
-  <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url()">
-    Pour tous les propriétaires de chien
+  <div class="cards row">
+    <div class="col-12 col-md-4">
+      <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url()">
+        Des groupes de sortie
+      </div>
+    </div>
+    <div class="col-12 col-md-4">
+      <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url()">
+        Pour tous les propriétaires de chien
+      </div>
+    </div>
+    <div class="col-12 col-md-4">
+      <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url()">
+        Les groupes et les maps
+      </div>
+    </div>
   </div>
-
-  <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url()">
-    Les groupes et les maps
-  </div>
-  <%= link_to "inscrivez-vous maintenant !", new_user_registration_path, class: "btn btn-flat" %>
+  <%= link_to "Inscrivez-vous maintenant !", new_user_registration_path, class: "btn btn-flat" %>
 </div>
