--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,14 +1,5 @@
 .navbar-lewagon {
-  justify-content: space-between;
   background: white;
-}
-
-.navbar-lewagon .navbar-collapse {
-  flex-grow: 0;
-}
-
-.navbar-lewagon .navbar-brand img {
-  width: 40px;
 }
 
 /* Fixed bottom navbar */
@@ -18,4 +9,26 @@
   width: 100%;
   z-index: 1030;
   box-shadow: 0 -2px 5px rgba(0,0,0,0.1);
+}
+
+/* Padding for body to avoid content being hidden behind navbar */
+body {
+  padding-bottom: 60px; /* Adjust this value based on the height of your navbar */
+}
+
+.navbar-brand img {
+  width: 40px;
+}
+
+.nav-link i {
+  font-size: 18px; /* Adjust the size as needed */
+}
+
+.d-flex.justify-content-around {
+  flex: 1;
+}
+
+.navbar-nav.ms-auto {
+  display: flex;
+  align-items: center;
 }
