--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,15 +1,25 @@
 <div class="navbar navbar-expand-sm navbar-light navbar-lewagon navbar-fixed-bottom">
-  <div class="container-fluid">
-    <%= link_to root_path, class: "navbar-brand" do %>
-      <%= image_tag "logo chien.jpg" %>
-    <% end %>
+  <div class="container-fluid d-flex justify-content-between align-items-center">
+
+    <!-- Div pour les icônes centrées horizontalement avec espace égal -->
+    <div class="d-flex justify-content-around align-items-center w-50">
+      <%= link_to root_path, class: "nav-link" do %>
+        <i class="fa-solid fa-house"></i>
+        <% end %>
+      <%= link_to "#", class: "nav-link" do %>
+        <i class="fa-solid fa-magnifying-glass"></i> <!-- Icône de recherche -->
+      <% end %>
+      <%= link_to "#", class: "nav-link" do %>
+        <i class="fas fa-users"></i> <!-- Icône de groupes -->
+      <% end %>
+    </div>
 
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto">
+      <ul class="navbar-nav ms-auto">
         <% if user_signed_in? %>
           <li class="nav-item active">
             <%= link_to "Home", "#", class: "nav-link" %>
