--- a/app/assets/stylesheets/components/_button_form.scss
+++ b/app/assets/stylesheets/components/_button_form.scss
@@ -1,6 +1,6 @@
 .button-form {
   border-radius: 9px;
-  background-color: #f07f71;
+  background-color: #e36251;
   box-shadow: 8px 8px 5px -7px rgba(0, 0, 0, 0.13);
   width: 30%;
   text-align: center;
