--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -3,5 +3,6 @@
 @import "avatar";
 @import "form_legend_clear";
 @import "navbar";
-@import "button-form";
-@import "sign-btn";
+@import "button_form";
+@import "sign_btn";
+@import "custom_forms";
