--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -9,30 +9,35 @@
                 label: "Prénom",
                 required: true,
                 autofocus: true,
-                input_html: { autocomplete: "first_name" }%>
+                label_html: { class: 'form-label-custom' },
+                input_html: { autocomplete: "first_name", class: 'custom-class' } %>
     <%= f.input :last_name,
                 label: "Nom",
                 required: true,
                 autofocus: true,
-                input_html: { autocomplete: "last_name" }%>
+                label_html: { class: 'form-label-custom' },
+                input_html: { autocomplete: "last_name", class: 'custom-class' }%>
     <%= f.input :email,
                 label: "E-mail",
                 required: true,
                 autofocus: true,
-                input_html: { autocomplete: "email" }%>
+                label_html: { class: 'form-label-custom' },
+                input_html: { autocomplete: "email", class: 'custom-class' }%>
     <%= f.input :password,
                 label: "Mot de passe",
                 required: true,
                 hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length),
-                input_html: { autocomplete: "new-password" } %>
+                label_html: { class: 'form-label-custom' },
+                input_html: { autocomplete: "new-password", class: 'custom-class' } %>
     <%= f.input :password_confirmation,
                 label: "Confirmation du mot de passe",
                 required: true,
-                input_html: { autocomplete: "new-password" } %>
+                label_html: { class: 'form-label-custom' },
+                input_html: { autocomplete: "new-password", class: 'custom-class' } %>
   </div>
 
   <div class="form-actions">
-    <%= f.button :submit, "Valider", class: "button-form" %>
+    <%= f.button :submit, "Valider 🐶", class: "button-form" %>
   </div>
 <% end %>
 <div class="d-flex justify-content-between mt-3">
