--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,23 +1,3 @@
-<div class="container">
-  <div>
-    <%# <input type="text" id="search" placeholder="Recherche par ville..."> %>
-    <script src='https://api.mapbox.com/mapbox-gl-js/v2.6.1/mapbox-gl.js'></script>
-    <script src='https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v4.7.2/mapbox-gl-geocoder.min.js'></script>
-  </div>
-
-    <div class="map" style="width: 100%; height: 932px;"
-      data-controller="map"
-      data-map-markers-value="<%= @markers.to_json %>"
-      data-map-api-key-value="<%= ENV['MAPBOX_API_KEY']%>">
-    </div>
-</div>
-
-<div>
-  <mapbox-geocoder class="div1 bouton-search style-search"
-    access-token="pk.eyJ1IjoidHVjYXNzZXNsZXNjb3VpbGxlcyIsImEiOiJjbHhraG51NzEwMWd0MmpzZG02aXQ4bjlkIn0.Rf-MR-RK_4Qi75WYkOINjg"
-    proximity="0,0"
-    id="searchButton"
-  >
-  </mapbox-geocoder>
-
+<div id="home-page">
+  <div id="map" style="position: absolute; width: 100%; height: 100%"></div>
 </div>
