--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -5,9 +5,8 @@
 @import "navbar";
 
 @import "map";
-@import "searchbar"
+@import "searchbar";
 
 @import "button_form";
 @import "sign_btn";
 @import "custom_forms";
-
