--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -1,2 +1,15 @@
-<h1>Groups#show</h1>
-<p>Find me in app/views/groups/show.html.erb</p>
+<h1 style="margin-left: 150px; margin-top: 15px;">Nom du groupe</h1>
+
+<div class="button-group">
+  <div class="button-group-category" >
+    Les Sorties
+  </div>
+
+  <div class="button-group-category" >
+    Crée ta Sortie
+  </div>
+
+  <div class="button-group-category" >
+    Les Membres
+  </div>
+</div>
