--- a/app/views/profiles/new.html.erb
+++ b/app/views/profiles/new.html.erb
@@ -1,2 +1,45 @@
-<h1>Profiles#new</h1>
-<p>Find me in app/views/profiles/new.html.erb</p>
+<div class="container">
+<h2 class="mt-5">Créer un profil</h2>
+
+<%= simple_form_for(@profile) do |f| %>
+  <%= f.error_notification %>
+
+  <div class="form-inputs">
+    <%= f.input :username,
+                label: "Nom d'utilisateur",
+                required: true,
+                autofocus: true,
+                label_html: { class: 'form-label-custom' },
+                input_html: { autocomplete: "username", class: 'custom-class' } %>
+    <%= f.input :gender,
+                label: "Genre",
+                required: true,
+                autofocus: true,
+                label_html: { class: 'form-label-custom' },
+                input_html: { autocomplete: "gender", class: 'custom-class' }%>
+    <%= f.input :city,
+                label: "Ville",
+                required: true,
+                autofocus: true,
+                label_html: { class: 'form-label-custom' },
+                input_html: { autocomplete: "email", class: 'custom-class' }%>
+    <%= f.input :street,
+                label: "Rue à proximité pour trouver des groupes",
+                required: true,
+                label_html: { class: 'form-label-custom' },
+                input_html: { autocomplete: "street", class: 'custom-class' } %>
+  </div>
+
+  <div class="form-actions">
+    <%= f.button :submit, "Valider 🐶", class: "button-form" %>
+  </div>
+<% end %>
+<div class=" mt-3">
+<p class="mb-1">
+Vous voulez revenir en arrière?
+</p>
+<div class="edit-btn">
+<%= link_to "Editer le compte", edit_user_registration_path(@user) %>
+</div>
+</div>
+</div>
