Front de la page Walks

--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -10,4 +10,5 @@
 @import "button";
 @import "sign_btn";
 @import "custom_forms";
-@import "group_card"
+@import "group_card";
+@import "walks_card"
