index show new create qui marchent pas encore

--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -2,32 +2,18 @@
   <div class="btn-div">
     <%= link_to "Créer un groupe", "#", class: "button-form btn btn-link" %>
   </div>
-  <div class="card-product">
-    <img src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/skateboard.jpg" />
-    <div class="card-product-infos">
-      <h2>Product name</h2>
-      <p>Product description with <strong>relevant info</strong> only.</p>
+
+<% if @groups.any? %>
+  <% @groups.each do |group| %>
+    <div class="card-product">
+      <img src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/skateboard.jpg" alt="<%= group.name %>" />
+      <div class="card-product-infos">
+        <h2><%= group.name %></h2>
+        <p><%= group.description %></p>
+      </div>
     </div>
-  </div>
-  <div class="card-product">
-    <img src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/skateboard.jpg" />
-    <div class="card-product-infos">
-      <h2>Product name</h2>
-      <p>Product description with <strong>relevant info</strong> only.</p>
-    </div>
-  </div>
-  <div class="card-product">
-    <img src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/skateboard.jpg" />
-    <div class="card-product-infos">
-      <h2>Product name</h2>
-      <p>Product description with <strong>relevant info</strong> only.</p>
-    </div>
-  </div>
-  <div class="card-product">
-    <img src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/skateboard.jpg" />
-    <div class="card-product-infos">
-      <h2>Product name</h2>
-      <p>Product description with <strong>relevant info</strong> only.</p>
-    </div>
-  </div>
+  <% end %>
+<% else %>
+  <p>Vous n'appartenez à aucun groupe pour le moment.</p>
+<% end %>
 </div>
