--- a/app/assets/stylesheets/components/_group_card.scss
+++ b/app/assets/stylesheets/components/_group_card.scss
@@ -17,6 +17,7 @@
   display: flex;
   align-items: center;
   margin-bottom: 20px;
+  border-radius: 5px;
 
   @media (max-width: 430px) {
     height: auto;
