header avec navbar mais pas cliquable

--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -11,4 +11,5 @@
 @import "sign_btn";
 @import "custom_forms";
 @import "group_card";
-@import "walks_card"
+@import "walks_card";
+@import "header"
