--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -1,7 +1,7 @@
 <!-- app/views/groups/show.html.erb -->
 <div class="container">
   <div class="btn-div">
-    <%= link_to "Créer un groupe", new_profile_group_path(@profile), class: "button-form btn btn-link", style: "text-decoration:none;" %>
+    <%= link_to "Créer un groupe 🐶", new_profile_group_path(@profile), class: "button-form btn btn-link", style: "text-decoration:none;" %>
   </div>
 
   <% if @groups.any? %>
