--- a/app/assets/stylesheets/components/_button_form.scss
+++ b/app/assets/stylesheets/components/_button_form.scss
@@ -2,7 +2,7 @@
   border-radius: 9px;
   background-color: #e36251;
   box-shadow: 8px 8px 5px -7px rgba(0, 0, 0, 0.13);
-  width: 30%;
+  width: auto;
   text-align: center;
   color: #f1e5d1 !important;
 }
