avatar et header

--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -2,7 +2,7 @@
 <div class="header-container">
   <div class="header fixed-top">
     <div class="dropdown">
-      <%= image_tag "https://kitt.lewagon.com/placeholder/users/sarahlafer", class: "avatar-bordered dropdown-toggle", alt: "avatar-bordered", id: "dropdownMenuButton", data: { bs_toggle: "dropdown" }, 'aria-expanded': "false" %>
+      <%= image_tag "pp facebook.jpg", class: "avatar-bordered dropdown-toggle", alt: "avatar-bordered", id: "dropdownMenuButton", data: { bs_toggle: "dropdown" }, 'aria-expanded': "false" %>
       <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
         <li><%= link_to 'Mon compte', edit_user_registration_path, class: 'dropdown-item' %></li>
         <li><%= link_to 'Mon profil', profile_path(current_user.profile), class: 'dropdown-item' %></li>
