--- a/app/views/pages/search.html.erb
+++ b/app/views/pages/search.html.erb
@@ -1,38 +1,34 @@
 <div class="container">
   <h2 class="mt-5">Recherche</h2>
 
-  <%= form_with url: search_path, method: :get, class: "d-flex" do |f| %>
-    <%= f.text_field :city, class: "form-control", placeholder: "Quelle ville cherchez-vous ?", autocomplete: "off" %>
-    <%= f.date_field :date, class: "form-control", placeholder: "Date", autocomplete: "off" %>
-    <%= f.time_field :start_time, class: "form-control", placeholder: "Heure de début", autocomplete: "off" %>
-    <%= f.text_field :adress, class: "form-control", placeholder: "Adresse", autocomplete: "off" %>
-    <%= f.submit "Rechercher", class: "btn btn-primary ml-2" %>
+  <%= form_with url: search_path, method: :get, class: "d-flex flex-column" do |f| %>
+    <div class="form-group">
+      <%= f.date_field :date, class: "form-control", placeholder: "Date", autocomplete: "off" %>
+    </div>
+    <div class="form-group">
+      <%= f.time_field :start_time, class: "form-control", placeholder: "Heure de début", autocomplete: "off" %>
+    </div>
+    <div class="form-group">
+      <%= f.text_field :adress, class: "form-control", placeholder: "Adresse de la promenade", autocomplete: "off" %>
+    </div>
+    <%= f.submit "Rechercher", class: "btn btn-primary mt-2" %>
   <% end %>
 
-  <% if @groups.any? || @walks.any? %>
-    <div class="results">
-      <% if @groups.any? %>
-        <h3>Groupes</h3>
-        <div class="cards">
-          <% @groups.each do |group| %>
-            <div class="card">
-              <p><strong>City:</strong> <%= group.city %></p>
-            </div>
-          <% end %>
-        </div>
-      <% end %>
-
-      <% if @walks.any? %>
-        <h3>Promenades</h3>
-        <div class="cards">
-          <% @walks.each do |walk| %>
-            <div class="card">
+  <% if @groups.any? %>
+    <h3>Groupes et Promenades</h3>
+    <div class="cards">
+      <% @groups.each do |group| %>
+        <div class="card mb-3">
+          <h4><%= group.name %></h4>
+    <img src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/skateboard.jpg"  width="200px"/>
+          <div>
+            <% group.walks.where(id: @walks.pluck(:id)).each do |walk| %>
               <p><strong>Date:</strong> <%= walk.date %></p>
-              <p><strong>Start Time:</strong> <%= walk.start_time %></p>
-              <p><strong>Address:</strong> <%= walk.adress %></p>
+              <p><strong>Heure de début:</strong> <%= walk.start_time %></p>
+              <p><strong>Adresse:</strong> <%= walk.adress %></p>
               <!-- Ajoutez d'autres informations pertinentes pour Walk ici -->
-            </div>
-          <% end %>
+            <% end %>
+          </div>
         </div>
       <% end %>
     </div>
