--- a/app/assets/stylesheets/components/_custom_forms.scss
+++ b/app/assets/stylesheets/components/_custom_forms.scss
@@ -8,3 +8,10 @@
 .form-label-custom {
   color: #e36251;
 }
+
+.custom-search-form {
+  border: 1px solid #b8b8b8;
+  background-color: #e7e5e5;
+  margin-top: 3px;
+  border-radius: 3px;
+}
