--- a/app/views/pages/search.html.erb
+++ b/app/views/pages/search.html.erb
@@ -2,16 +2,16 @@
   <h2 class="mt-5">Recherche</h2>
 
   <%= form_with url: search_path, method: :get, class: "d-flex flex-column" do |f| %>
-    <div class="form-group">
+    <div class="form-group custom-search-form">
       <%= f.date_field :date, class: "form-control", placeholder: "Date", autocomplete: "off" %>
     </div>
-    <div class="form-group">
+    <div class="form-group custom-search-form">
       <%= f.time_field :start_time, class: "form-control", placeholder: "Heure de début", autocomplete: "off" %>
     </div>
-    <div class="form-group">
+    <div class="form-group custom-search-form">
       <%= f.text_field :adress, class: "form-control", placeholder: "Adresse de la promenade", autocomplete: "off" %>
     </div>
-    <%= f.submit "Rechercher", class: "btn btn-primary mt-2" %>
+    <%= f.submit "Rechercher", class: "button-form mt-2" %>
   <% end %>
 
   <% if @groups.any? %>
@@ -20,7 +20,7 @@
       <% @groups.each do |group| %>
         <div class="card mb-3">
           <h4><%= group.name %></h4>
-    <img src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/skateboard.jpg"  width="200px"/>
+    <img src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/skateboard.jpg"  width="200"/>
           <div>
             <% group.walks.where(id: @walks.pluck(:id)).each do |walk| %>
               <p><strong>Date:</strong> <%= walk.date %></p>
