--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,15 @@
+<!-- app/views/pages/home.html.erb -->
 <div id="home-page">
-  <div id="map" style="position: absolute; width: 100%; height: 100%"></div>
+  <% if user_signed_in? %>
+    <div id="map" style="position: absolute; width: 100%; height: 100%"></div>
+  <% else %>
+    <div class="page-container">
+      <h1>Bienvenue sur DoggyWalky</h1>
+      <div class="action-container">
+      <p>Veuillez vous connecter pour accéder à la carte et à vos groupes.</p>
+      <%= link_to 'Se connecter', new_user_session_path, class: 'btn btn-primary' %>
+      <%= link_to "S'inscrire", new_user_registration_path, class: 'btn btn-secondary' %>
+      </div>
+    </div>
+  <% end %>
 </div>
