--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,13 +3,21 @@
   <% if user_signed_in? %>
     <div id="map" style="position: absolute; width: 100%; height: 100%"></div>
   <% else %>
-    <div class="page-container">
-      <h1>Bienvenue sur DoggyWalky</h1>
-      <div class="action-container">
-      <p>Veuillez vous connecter pour accéder à la carte et à vos groupes.</p>
-      <%= link_to 'Se connecter', new_user_session_path, class: 'btn btn-primary' %>
-      <%= link_to "S'inscrire", new_user_registration_path, class: 'btn btn-secondary' %>
+    <div class="header">
+    <h1>DoggyWalky</h1>
+    
+
+  <div class="container content">
+    <div class="card-h2">
+    <h2>Trouvez dès maintenant un groupe de sortie qui vous correspond.</h2>
+    <p>Pour des promenades en bonne compagnie, et du bonheur !</p>
+    </div>
+    <div class="card">
+      <div class="card-body">
+        <p>Ne tardez plus et rejoignez dès maintenant notre communauté :</p>
+        <%= link_to "Inscrivez-vous", new_user_registration_path, class: "btn btn-primary btn-signup" %>
       </div>
     </div>
+  </div>
   <% end %>
 </div>
