--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -7,7 +7,7 @@
       <%= link_to root_path, class: "nav-link" do %>
         <i class="fa-solid fa-house"></i>
       <% end %>
-      <%= link_to search_path, class: "nav-link" do %>
+      <%= link_to search_path(homepage: true), class: "nav-link" do %>
         <i class="fa-solid fa-magnifying-glass"></i> <!-- Icône de recherche -->
       <% end %>
       <% if @profile.present? %>
