--- a/app/views/profiles/edit.html.erb
+++ b/app/views/profiles/edit.html.erb
@@ -7,27 +7,33 @@
   <div class="form-inputs">
     <%= f.input :username,
                 label: "Nom d'utilisateur",
-                required: true,
+                required: false,
                 autofocus: true,
                 label_html: { class: 'form-label-custom' },
                 input_html: { autocomplete: "username", class: 'custom-class' } %>
     <%= f.input :gender,
                 label: "Genre",
-                required: true,
+                required: false,
                 autofocus: true,
                 label_html: { class: 'form-label-custom' },
                 input_html: { autocomplete: "gender", class: 'custom-class' }%>
     <%= f.input :city,
                 label: "Ville",
-                required: true,
+                required: false,
                 autofocus: true,
                 label_html: { class: 'form-label-custom' },
                 input_html: { autocomplete: "email", class: 'custom-class' }%>
     <%= f.input :street,
                 label: "Rue à proximité pour trouver des groupes",
-                required: true,
+                required: false,
                 label_html: { class: 'form-label-custom' },
                 input_html: { autocomplete: "street", class: 'custom-class' } %>
+                 <%= f.input :current_password,
+                hint: "Rentrez votre mot de passe pour confirmer",
+                required: true,
+                label: "Mot de passe",
+                label_html: { class: 'form-label-custom' },
+                input_html: { autocomplete: "current-password", class: 'custom-class' } %>
   </div>
 
   <div class="form-actions">
