--- a/app/views/profiles/new.html.erb
+++ b/app/views/profiles/new.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
 <h2 class="mt-5">Créer un profil</h2>
 
-<%= simple_form_for(@profile) do |f| %>
+<%= simple_form_for(@profilenew) do |f| %>
   <%= f.error_notification %>
 
   <div class="form-inputs">
