--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -5,6 +5,7 @@
   position: relative;
   width: 100%;
   height: 100%;
+  padding-top: 20px; /* Ajout de padding en haut pour espacer l'image du haut de la page */
 }
 
 .welcome-section {
@@ -13,6 +14,11 @@
   border-radius: 10px;
   max-width: 500px;
   margin: auto;
+}
+
+.logo-homepage {
+  max-width: 100%; /* Assure que l'image ne dépasse pas la largeur du conteneur */
+  height: auto;    /* Maintient les proportions de l'image */
 }
 
 .welcome-section .card {
@@ -42,6 +48,7 @@
     font-size: 1.2rem;
   }
 }
+
 p {
   margin-top: 22px;
 }
