--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,6 +3,7 @@
   <% if user_signed_in? %>
     <div id="map" style="position: absolute; width: 100%; height: 100%"></div>
   <% else %>
+     <%= image_tag "logo DW.png", class: "logo-homepage" %>
     <div class="welcome-section text-center">
       <h1 class="display-4 mb-4">Bienvenue sur DoggyWalky</h1>
       <p class="lead mb-4">Rejoignez notre communauté pour des promenades inoubliables avec votre toutou préféré.</p>
