--- a/app/views/profiles/new.html.erb
+++ b/app/views/profiles/new.html.erb
@@ -23,7 +23,7 @@
                 required: true,
                 autofocus: true,
                 label_html: { class: 'form-label-custom' },
-                input_html: { autocomplete: "email", class: 'custom-class' }%>
+                input_html: { autocomplete: "off", class: 'custom-class' }%>
     <%= f.input :street,
                 label: "Rue à proximité pour trouver des groupes",
                 required: true,
