--- a/app/views/walks/index.html.erb
+++ b/app/views/walks/index.html.erb
@@ -9,6 +9,12 @@
           <h2><%= walk.date %></h2>
           <p><%= walk.start_time %></p>
           <p><%= walk.adress %></p>
+
+        <div class="btn-div">
+          <% if !current_user.profile.walks.include?(@walk) %>
+          <%= link_to "Rejoins la sortie 🐶", walk_join_path(@walks), data: {turbo_method: :post}, class: "button-form btn btn-link", style: "text-decoration:none;" %>
+          <% end %>
+        </div>
         </div>
   </div>
       <% end %>
