--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -15,7 +15,7 @@
 </div>
 
   <div class="btn-div">
-    <% if !current_user.profile.groups.include?(@group) %>
+    <% if !current_user.profile.walks.include?(@group) %>
     <%= link_to "Rejoins le Groupe 🐶", group_join_path(@group), data: {turbo_method: :post}, class: "button-form btn btn-link", style: "text-decoration:none;" %>
     <% end %>
   </div>
