--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -11,7 +11,7 @@
           <% else %>
           <li><%= link_to 'Créer un profil', new_profile_path %></li>
         <% end %>
-        <li><%= link_to "Log out", destroy_user_session_path, class: "dropdown-item", data: {turbo_method: :delete} %></li>
+        <li><%= link_to "Log Out", destroy_user_session_path, method: :delete, class: "dropdown-item logout-link" %></li>
 
       </ul>
     </div>
