photos sur cloudinary et install de la gem

--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -9,7 +9,7 @@
       <% @groups.each do |group| %>
         <%= link_to profile_group_path(@profile, group), class: "card-link" do %>
           <div class="card-product">
-            <img src="https://www.softfluent.fr/wp-content/uploads/2019/10/g%C3%A9olocalisation.png" alt="<%= group.name %>" />
+            <%= cl_image_tag("qlqwg0ygtzhztwy8kdzb", alt: group.name) %>
             <div class="card-product-infos">
               <h2><%= group.name %></h2>
               <p><%= group.description %></p>
