--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -3,8 +3,8 @@
   <div class="header fixed-top">
     <% if user_signed_in? %>
     <div class="dropdown" data-controller="dropdown">
-      <%= image_tag "pp facebook.jpg", class: "avatar-bordered dropdown-toggle", alt: "avatar-bordered", id: "dropdownMenuButton", data: { bs_toggle: "dropdown", action: " click->dropdown#drop" }, 'aria-expanded': "false" %>
-      <ul class="dropdown-menu d-none" aria-labelledby="dropdownMenuButton" data-dropdown-target="down">
+      <%= cl_image_tag("f29lvk0w8dbf5ykju9is", class: "avatar-bordered dropdown-toggle", alt: "avatar-bordered", id: "dropdownMenuButton", data: { bs_toggle: "dropdown", action: "click->dropdown#drop" }, 'aria-expanded': "false") %>
+           <ul class="dropdown-menu d-none" aria-labelledby="dropdownMenuButton" data-dropdown-target="down">
         <li><%= link_to 'Mon compte', edit_user_registration_path, class: 'dropdown-item' %></li>
         <% if current_user.profile.present? %>
           <li><%= link_to 'Mon profil', edit_profile_path(current_user.profile), class: 'dropdown-item' %></li>
@@ -16,7 +16,7 @@
       </ul>
     </div>
     <% else %>
-      <%= image_tag "avatar2.png", class: "avatar-bordered", alt: "avatar-bordered" %>
+      <%= cl_image_tag("avatar2_byf4no", class: "avatar-bordered", alt: "avatar-bordered") %>
     <% end %>
   </div>
 </div>
