Revert "Map a jour et qui fonctionne, bouton rejoindre et quitter un groupe, …"

--- a/app/views/pages/search.html.erb
+++ b/app/views/pages/search.html.erb
@@ -33,6 +33,7 @@
             <!-- Ajoutez d'autres informations pertinentes pour Walk ici -->
           <% end %>
         </div>
+      </div>
     <% end %>
   </div>
 <% else %>
