--- a/app/assets/stylesheets/components/_map.scss
+++ b/app/assets/stylesheets/components/_map.scss
@@ -1,39 +1,15 @@
-// Specific CSS for your home-page
-// body {
-//   margin: 0;
-//   padding: 0;
-//   display: flex;
-//   flex-direction: column;
-// }
-// .map-container {
-//   position: static;
-//   height: 90vh;
-// }
 
-#map {
-  top: 0;
-  bottom: 0;
-  width: 46vh;
-  height: 100vh;
-  // position: absolute;
-  // width: 100%;
-  // height: 100vh;
-  // z-index: -1;
+.map{
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    width: 100%;
+    height: 100%;
+    margin-left: -12px;
 }
 
-// Ancienne version du CSS de la map
-
-// .map{
-//   position: absolute;
-//   top: 0;
-//   bottom: 0;
-//   width: 100%;
-//   height: 100%;
-//   margin-left: -12px;
-// }
-
-// @media (max-width: 600px) {
-//     #map {
-//       height: 100vh;
-//     }
-//   }
+@media (max-width: 600px) {
+      #map {
+        height: 100vh;
+      }
+    }
