un menu modest et pas tres beau s'affiche à partir d'une api lorsque l'utilisateur rentre une ville

--- a/app/views/profiles/edit.html.erb
+++ b/app/views/profiles/edit.html.erb
@@ -18,12 +18,13 @@
                 collection: Profile::GENDER,
                 label_html: { class: 'form-label-custom' },
                 input_html: { autocomplete: "gender", class: 'custom-class' }%>
-    <%= f.input :city,
-                label: "Ville",
-                required: false,
-                autofocus: true,
-                label_html: { class: 'form-label-custom' },
-                input_html: { autocomplete: "off", class: 'custom-class', id: 'city-input', list: 'city-suggestions' }%>
+<%= f.input :city,
+            label: "Ville",
+            required: false,
+            autofocus: true,
+            label_html: { class: 'form-label-custom' },
+            input_html: { autocomplete: "off", class: 'custom-class', id: 'city-input', list: 'city-suggestions' } %>
+            <datalist id="city-suggestions"></datalist>
     <%= f.input :street,
                 label: "Rue à proximité pour trouver des groupes",
                 required: false,
