remerge master index group

--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -29,7 +29,7 @@
   position: relative;
 }
 
-.card-link {
+.card-link-grp {
   text-decoration: none;
   color: inherit; /* Utilisez inherit pour hériter de la couleur du parent */
   display: flex;
