--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -2,19 +2,19 @@
 
 <div class="button-group">
   <div class="button-group-category-showgr">
-    <%= link_to group_walks_path(@group), class: 'card-link' do %>
+    <%= link_to group_walks_path(@group), class: 'card-link-grp' do %>
       <div class="card-content">Les sorties à venir</div>
     <% end %>
   </div>
 
   <div class="button-group-category-showgr">
-    <%= link_to new_group_walk_path(@group), class: 'card-link' do %>
+    <%= link_to new_group_walk_path(@group), class: 'card-link-grp' do %>
       <div class="card-content">Crée ta Sortie</div>
     <% end %>
   </div>
 
   <div class="button-group-category-showgr">
-    <%= link_to group_group_user_path(@group), class: 'card-link' do %>
+    <%= link_to group_group_user_path(@group), class: 'card-link-grp' do %>
       <div class="card-content">La liste des Membres</div>
     <% end %>
   </div>
