le pas tres beau menu est aussi surla new de profil mtn

--- a/app/assets/stylesheets/components/_datalist.scss
+++ b/app/assets/stylesheets/components/_datalist.scss
@@ -1,4 +1,4 @@
-#city-suggestions::-webkit-datalist-option {
+#city-suggestions option {
   background-color: #a84949 !important;
   color: #a10202 !important;
   padding: 5px 10px;
