--- a/app/views/profiles/new.html.erb
+++ b/app/views/profiles/new.html.erb
@@ -18,12 +18,13 @@
                 collection: Profile::GENDER,
                 label_html: { class: 'form-label-custom' },
                 input_html: { autocomplete: "gender", class: 'custom-class' }%>
-    <%= f.input :city,
+     <%= f.input :city,
                 label: "Ville",
-                required: true,
+                required: false,
                 autofocus: true,
                 label_html: { class: 'form-label-custom' },
-                input_html: { autocomplete: "email", class: 'custom-class' }%>
+                input_html: { autocomplete: "off", class: 'custom-class', id: 'city-input', list: 'city-suggestions' } %>
+                <datalist id="city-suggestions"></datalist>
     <%= f.input :street,
                 label: "Rue à proximité pour trouver des groupes",
                 required: true,
