--- a/app/assets/stylesheets/components/_map.scss
+++ b/app/assets/stylesheets/components/_map.scss
@@ -1,13 +1,13 @@
-
-.map{
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    width: 100%;
-    height: 100%;
-    margin-left: -12px;
+#map {
+  top: 0;
+  bottom: 0;
+  width: 46vh;
+  height: 100vh;
+  // position: absolute;
+  // width: 100%;
+  // height: 100vh;
+  // z-index: -1;
 }
-
 @media (max-width: 600px) {
       #map {
         height: 100vh;
