--- a/app/views/walks/index.html.erb
+++ b/app/views/walks/index.html.erb
@@ -11,8 +11,8 @@
           <p><%= walk.adress %></p>
 
         <div class="btn-div">
-          <% if !current_user.profile.walks.include?(@walk) %>
-          <%= link_to "Rejoins la sortie 🐶", walk_join_path(@walks), data: {turbo_method: :post}, class: "button-form btn btn-link", style: "text-decoration:none;" %>
+          <% if !current_user.profile.walks.include?(walk) %>
+          <%= link_to "Rejoins la sortie 🐶", walk_join_path(walk), data: {turbo_method: :post}, class: "button-form btn btn-link", style: "text-decoration:none;" %>
           <% end %>
         </div>
         </div>
